# DuelScript

./: .gitignore  Cargo.toml  README.md
cards/: arcanite_magician.ds  ash_blossom.ds  borreload_dragon.ds  erebus_monarch.ds  exodia.ds  lava_golem.ds  limiter_removal.ds  materials_stress_test.ds  nibiru.ds  odd_eyes_pendulum_dragon.ds  pot_of_greed.ds  stardust_dragon.ds  thestalos_mega_monarch.ds  zoodiac_drident.ds
cards/audit/: c14558127.ds  c15800838.ds  c89312388.ds  c98263709.ds  c99176254.ds
cards/goat/: airknight_parshath.ds  asura_priest.ds  black_luster_soldier_eotb.ds  book_of_life.ds  bottomless_trap_hole.ds  brain_control.ds  breaker_the_magical_warrior.ds  c102380.ds  c1102515.ds  c12580477.ds  c12607053.ds  c13722870.ds  c13756293.ds  c14087893.ds  c14315573.ds  c14878871.ds  c16226786.ds  c17259470.ds  c17375316.ds  c17449108.ds  c18036057.ds  c18161786.ds  c18318842.ds  c19613556.ds  c2111707.ds  c2134346.ds  c21597117.ds  c2204140.ds  c22567609.ds  c22587018.ds  c23205979.ds  c23401839.ds  c23557835.ds  c24317029.ds  c25262697.ds  c26202165.ds  c26205777.ds  c27174286.ds  c2851070.ds  c28566710.ds  (+203 more)
cards/official/: c10000.ds  c10000000.ds  c10000010.ds  c10000020.ds  c10000030.ds  c10000040.ds  c10000080.ds  c10000090.ds  c10002346.ds  c10004783.ds  c10012614.ds  c10019086.ds  c10024317.ds  c10026986.ds  c10028593.ds  c1003028.ds  c10032958.ds  c10035717.ds  c1003840.ds  c10040267.ds  c10045474.ds  c1005587.ds  c10060427.ds  c1006081.ds  c10065487.ds  c10069180.ds  c10071151.ds  c10080320.ds  c10097168.ds  c10110717.ds  c10113611.ds  c10117149.ds  c10118318.ds  c10125011.ds  c10131855.ds  c10132124.ds  c10136446.ds  c10140443.ds  c10158145.ds  c10163855.ds  (+13258 more)
cards/test/: c12580477.ds  c19613556.ds  c24286941.ds  c40605147.ds  c40640057.ds  c40640058.ds  c40640059.ds  c40640060.ds  c40640061.ds  c40640070.ds  c40640071.ds  c40640072.ds  c40640073.ds  c40640074.ds  c40640075.ds  c40640076.ds  c40640077.ds  c40640078.ds  c40640079.ds  c40640080.ds  c40640081.ds  c40640082.ds  c40640083.ds  c40640084.ds  c40640085.ds  c40640086.ds  c40640087.ds  c40640088.ds  c40640089.ds  c40640090.ds  c40640091.ds  c40640092.ds  c40640093.ds  c40640094.ds  c40640095.ds  c40640096.ds  c40640097.ds  c40640098.ds  c40640099.ds  c40640100.ds  (+40 more)
cards/v2_official/: c10000030.ds  c10012614.ds  c10019086.ds  c10024317.ds  c10026986.ds  c1003028.ds  c10032958.ds  c10035717.ds  c10045474.ds  c1006081.ds  c10071151.ds  c10097168.ds  c10113611.ds  c10131855.ds  c10132124.ds  c10136446.ds  c10140443.ds  c10182251.ds  c10186633.ds  c10189126.ds  c10194329.ds  c10209545.ds  c10218411.ds  c10236520.ds  c10248192.ds  c10266279.ds  c10275411.ds  c10300821.ds  c10312660.ds  c10375182.ds  c10383554.ds  c10389142.ds  c10406322.ds  c1041278.ds  c10424147.ds  c10426067.ds  c10441498.ds  c10456559.ds  c10474647.ds  c10485110.ds  (+6554 more)
cards/v2_test/: a_hero_emerges.ds  abyss_soldier.ds  airknight_parshath.ds  apprentice_magician.ds  backup_soldier.ds  bazoo_the_soul_eater.ds  black_luster_ritual.ds  black_luster_soldier.ds  book_of_moon.ds  call_of_the_haunted.ds  change_of_heart.ds  chaos_sorcerer.ds  creature_swap.ds  crush_card_virus.ds  cyber_dragon.ds  d_d_warrior_lady.ds  dark_hole.ds  dark_mimic_lv1.ds  dd_warrior_lady.ds  delinquent_duo.ds  dimension_fusion.ds  dust_tornado.ds  enraged_battle_ox.ds  exarion_universe.ds  exiled_force.ds  fiber_jar.ds  fissure.ds  giant_rat.ds  graceful_charity.ds  gravekeepers_assailant.ds  heavy_storm.ds  injection_fairy_lily.ds  king_dragun.ds  kycoo_the_ghost_destroyer.ds  last_will.ds  level_limit_area_b.ds  lightning_vortex.ds  magical_merchant.ds  magical_scientist.ds  messenger_of_peace.ds  (+36 more)
docs/: COOKBOOK.md  ENGINE_INTEGRATION.md  EXPRESSIVENESS_GAPS.md  LANGUAGE_REFERENCE.md  STORIES.md  TRAIT_REFERENCE.md  V2_GRAMMAR_SPEC.md  V2_LANGUAGE_REFERENCE.md
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json
examples/: parse_card.rs
grammar/: duelscript.pest  duelscript_v2.pest
scripts/: lsp_manual_check.py
src/: ast.rs  block_match.rs  cdb.rs  database.rs  fmt.rs  lib.rs  llm.rs  lua_ast.rs  lua_transpiler.rs  migrate.rs  parser.rs  python.rs  validator.rs
src/compiler/: callback_gen.rs  expr_eval.rs  mod.rs  type_mapper.rs
src/engine/: bridge.rs  mod.rs
src/test_harness/: mock_runtime.rs  mod.rs  scenario.rs
src/v2/: ast.rs  compiler.rs  constants.rs  fmt.rs  lsp.rs  mock_runtime.rs  mod.rs  parser.rs  runtime.rs  segoc.rs  validator.rs
tests/: batch_migrate.rs  cards_runtime.rs  cards_snapshot.rs  corpus_compile.rs  corpus_smoke.rs  differential.rs  lsp_smoke.rs  sprint3_cards.rs  sprint4_cards.rs  sprint5_cards.rs  transpiler_failures.rs  transpiler_test.rs  v06_features.rs
tests/snapshots/: c12580477.snap  c19613556.snap  c24286941.snap  c40605147.snap  c40640057.snap  c40640058.snap  c40640059.snap  c40640060.snap  c40640061.snap  c40640070.snap  c40640071.snap  (+69 more)
(+11 files in other folders)
