[package]
name        = "duelscript"
version     = "1.0.0"
edition     = "2021"
description = "DuelScript — a standalone scripting language for Yu-Gi-Oh card mechanics"
license     = "MIT"
repository  = "https://github.com/yourname/duelscript"
keywords    = ["yugioh", "card-game", "dsl", "game-engine"]

[features]
default = []
# Enable SQLite CDB reading (requires rusqlite)
cdb = ["rusqlite"]
# Enable LSP server (tower-lsp + tokio)
lsp = ["tower-lsp", "tokio", "serde_json", "serde"]
# Enable Lua-AST translator (full-moon)
lua_ast = ["full_moon"]

[dependencies]
pest        = "2.7"
pest_derive = "2.7"
thiserror   = "1.0"
# Optional — enable with: duelscript = { features = ["cdb"] }
rusqlite    = { version = "0.31", features = ["bundled"], optional = true }
# Optional — enable with: duelscript = { features = ["lsp"] }
tower-lsp   = { version = "0.20", optional = true }
tokio       = { version = "1", features = ["io-std", "rt-multi-thread", "macros"], optional = true }
serde       = { version = "1", features = ["derive"], optional = true }
serde_json  = { version = "1", optional = true }
# Optional — enable with: duelscript = { features = ["lua_ast"] }
# `lua53` enables bitwise ops (|, &, ~, <<, >>) — EDOPro card scripts use them.
full_moon   = { version = "2.2", optional = true, default-features = false, features = ["lua53"] }

[lib]
name = "duelscript"
crate-type = ["rlib"]

[[bin]]
name = "duelscript"
path = "src/bin/duelscript.rs"

[[bin]]
name = "lua_inventory"
path = "src/bin/lua_inventory.rs"

[[bin]]
name = "duelscript_lsp"
path = "src/bin/duelscript_lsp.rs"
required-features = ["lsp"]

[[bin]]
name = "translate_corpus"
path = "src/bin/translate_corpus.rs"
required-features = ["cdb"]

[[bin]]
name = "lua_translate"
path = "src/bin/lua_translate.rs"
required-features = ["lua_ast", "cdb"]
